2005-10-22  Bastien Nocera  <hadess@hadess.net>

	* data/desktop.sh: patch from Brian Cameron <brian.cameron@sun.com>
	to allow build on systems with "echo -n"

2005-10-22  Bastien Nocera  <hadess@hadess.net>

	* configure.in: add gmodule-2.0 as a dependency for glade to be able
	to find creation functions for the custom widgets (Closes: #316596)
	* NEWS: updated

2005-10-22  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_get_backend_name): get the xine-lib version
	at run-time rather than at compile-time (Closes: #319131)
	* NEWS: updated

2005-10-22  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (drop_cb): fix DND on the playlist, which was
	asking for the parser to insert local filenames (Closes: #319066)

2005-10-20  Maxim Dziumanenko <mvd@mylinux.ua>

	* configure.in:
	* help/Makefile.am:
	* help/uk/*: Add Ukrainian manual.

2005-10-06  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-plugin.cpp: fix mime-type list leak,
	patch from Christian Persch <chpe@gnome.org> (Closes: #318117)

2005-10-03  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-plugin.cpp: Remove spurious argument, patch
	by Sylvain Bertrand <sylvain.bertrand@gmail.com> (Closes: #317852)

2005-10-03  Bastien Nocera  <hadess@hadess.net>

	* src/totem-interface.c: (totem_interface_load_with_root): 
	load the interface forcing the Totem gettext package at all times

2005-09-25  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd

2005-09-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_exit): remove the timeout for the popup
	when exiting to avoid the timeout being triggered during shutdown

2005-09-24  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_open_with_subtitle):
	* src/plparse/totem-disc.c: (cd_cache_new):
	* src/plparse/totem-disc.h:
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_add_iso),