@@ -1,5 +1,10 @@
 2005-10-22  Bastien Nocera  <hadess@hadess.net>
 
+	* src/egg-recent-*.c: update from libegg CVS to allow compilation
+	without libgnomeui (Closes: #315315)
+
+2005-10-22  Bastien Nocera  <hadess@hadess.net>
+
 	* data/desktop.sh: patch from Brian Cameron <brian.cameron@sun.com>
 	to allow build on systems with "echo -n"
 
